Sorted gap issue with home buttons for search

--- a/wp-content/themes/decimaltenths/src/scss/global/_extends.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_extends.scss
@@ -186,6 +186,10 @@
 	cursor: pointer;
     color: var(--brand-neon-green);
 
+	@include breakpoint(small down) {
+		margin-bottom: $medium-spacing;
+	}
+
 	&:hover,
 	&:focus {
 		color: var(--off-black);
